--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@
 
 # Ignore JSON files (contains quiz data)
 *.json
-
-# Ignore the quiz HTML file (contains logic and answers)
-pilot/pilotquiz.html
+!pilot/ijaio26new.json
 
 # Ignore OS generated files
 .DS_Store
